# EKO.DOC

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.bat  install.ps1  pyproject.toml  release.ps1  requirements.txt  ЭКО.DOC.bat
.claude/: launch.json
data/: coefficients.json  oktmo_ref.json  rates_nvos.json  substances.json
docs/: АНАЛИЗ_отчётность_и_автоматизация.md  Разработка_томов_НДВ_НДС_СЗЗ.md  УПРЗА_анализ.md
ecodoc/: __init__.py  __main__.py  cli.py
ecodoc/ai/: __init__.py  analyzer.py  config.py  detect.py  providers.py
ecodoc/calendar/: __init__.py  engine.py  obligations.py
ecodoc/core/: models.py  money.py  refdata.py  registry.py  serialize.py  validators.py  waste_agg.py  waste_summary.py  workspace.py
ecodoc/development/: __init__.py  dispersion.py  dispersion_export.py  dispersion_map.py  hazard_class.py  nmu.py  pek_program.py  volume_builder.py  waste_passport.py
ecodoc/gui/: __init__.py  index.html  server.py
ecodoc/intake/: __init__.py  classify.py  intake.py  (+1 more)
samples/: dispersion_sources.json  example_context.json  протокол_КХА_123.txt
tests/: conftest.py  test_declaration.py  test_devdocs.py  test_dispersion.py  test_dispersion_area_line.py  test_extract_formats.py  test_extractor.py  test_hazard_reference.py  test_intake_archive.py  test_intake_resilience.py  test_intake_scale.py  test_oktmo.py  test_pek.py  test_submit.py  test_tp2_air.py  test_tp2_water.py  test_validators.py  test_waste_acts.py  test_waste_forms.py  test_waste_report_iii.py  test_waste_summary.py  test_workspace_delete.py  test_workspace_onedrive.py
(+24 files in other folders)
