[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecodoc"
version = "0.31.0"
description = "ЭКО.DOC (продукт «ЭКО Проект») — генератор экологических документов РФ: отчётность, разработка, ИИ-анализ входящих, календарь, сторож форм"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ЭКО Проект" }]
keywords = ["экология", "НВОС", "отчётность", "ПЭК", "2-ТП", "отходы", "РПН"]

dependencies = [
    "PyMuPDF>=1.23",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "lxml>=5.0",
    "xlrd>=2.0",
    "striprtf>=0.0.26",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
pdf = ["pywin32>=306; sys_platform == 'win32'"]
dev = ["pytest>=8.0"]
full = ["ecodoc[ocr,pdf,dev]"]

[project.scripts]
ecodoc = "ecodoc.cli:main"

[tool.setuptools.packages.find]
include = ["ecodoc*"]

[tool.setuptools.package-data]
"ecodoc.watch" = ["sources.json"]
"ecodoc.gui" = ["index.html"]

[tool.setuptools.data-files]
"." = ["data/rates_nvos.json", "data/coefficients.json", "data/substances.json",
       "data/oktmo_ref.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
